# battleship

./: .gitignore  BattleshipConfig.h  BattleshipConfig.h.in  CMakeLists.txt  README.md  config.h  console.h  judge.cpp  player.cpp  socket.cpp  socket.h
include/: board.h  client.h  listener.h  server.h  socket.h
src/: CMakeLists.txt  client.cpp  client_main.cpp  judge.cpp  listener.cpp  player.cpp  server.cpp  server_main.cpp  socket.cpp
